--- a/D_Man/WebContent/css/style.css
+++ b/D_Man/WebContent/css/style.css
@@ -1,9 +1,10 @@
 h1 {
 	background-color: #f3f3f3;
 }
+
 ul {
     list-style-type: none;
-    margin:0;
+    margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #333;
@@ -11,15 +12,9 @@ ul {
 
 li {
     float: left;
-    text-shadow: gray;
-    border-right: 1px solid #bbb;
 }
 
-li:last-child {
-    border-right: none;
-}
-
-li a {
+li a, .dropbtn {
     display: inline-block;
     color: white;
     text-align: center;
@@ -27,9 +22,36 @@ li a {
     text-decoration: none;
 }
 
-li a:hover {
+li a:hover, .dropdown:hover .dropbtn {
     background-color: green;
 }
+
+li.dropdown {
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.dropdown-content a:hover {background-color: #f1f1f1}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
 .active {
     background-color: #4CAF50;
 }
