--- a/D_Man/WebContent/css/style.css
+++ b/D_Man/WebContent/css/style.css
@@ -1,5 +1,5 @@
 h1 {
-	background-color: #f3f3f3;
+	background-color: white;
 	color: #369;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 250%;
